[package]
name = "multiset-hash"
description = "An incremental hash function for multi-sets."
repository = "https://github.com/cronokirby/multiset-hash"
license = "MIT"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cannot update to latest version of sha2 and digest until curve25519-dalek library is updated

[dependencies]
digest = "0.9.0"
curve25519-dalek = "3.1.0"

[dev-dependencies]
sha2 = "0.9.5"
